--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This file was created by JetBrains WebStorm 4.0.1 for binding GitHub repository
+Slides presenting KnockoutJS in very easy way. Inspired by http://slides.html5rocks.com
+
+You could see it online at http://slides.knockoutjs.in.ua
